--- a/style.css
+++ b/style.css
@@ -134,3 +134,167 @@ span{
     transform: scale(1.3)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
 }
+
+.btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--bg-color);
+    border-radius: 4rem;
+    font-size: 1.6rem;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+.btn:hover{
+    transform: scale(1.05);
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.text-animation{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+.text-animation span{
+    position: relative;
+}
+.text-animation span ::before{
+    content: 'youtube';
+    color: var(--main-color);
+    animation: words 20s infinite;
+}
+.text-animation span::after{
+    content: '';
+    background-color: var(--bg-color);
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid var(--bg-color);
+    right: -8px;
+    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
+}
+@keyframes cursor{
+    to{
+        border-left: 2px solid var(--main-color);
+    }
+}
+@keyframes words{
+    0%,
+    20%{
+        content: 'Web Developer';
+    }
+    21%,
+    40%{
+        content: 'Web Designer';
+    }
+    41%,
+    60%{
+        content: 'Photographer';
+    }
+    61%,
+    80%{
+        content: 'Blogger';
+    }
+    81%,
+    100%{
+        content: 'Content Creator';
+    }
+}
+@keyframes typing{
+    10%,
+    15%,
+    20%,
+    30%,
+    35%,
+    50%,
+    55%,
+    70%,
+    75%,
+    90%,
+    95% {
+        width: 0;
+    }
+    5%,
+    20%,
+    25%,
+    40%,
+    45%,
+    60%,
+    65%,
+    80%,
+    85% {
+        width: calc(100% + 8px);
+    }
+}
+
+.heading{
+    text-align: center;
+    font-size: 8rem;
+}
+.services{
+    background-color: var(--second-bg-color);
+}
+.services h2{
+    margin-bottom: 8rem;
+}
+.service-container{
+    display: flex;
+    justify-content: center;
+    align-items: wrap;
+    flex-wrap: wrap;
+    gap: 3rem,
+}
+.service-container .services-box{
+    flex: 1 1 40rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: var(--main-color);
+    padding: 3rem 2rem 4rem;
+    height: 550px;
+    border-radius: 2rem;
+    border: 3px solid transparent;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.service-container .services-box:hover{
+    transform: scale(1.02);
+    background-color: white;
+    color: black;
+}
+.services-box i{
+    font-size: 7rem;
+    color: black;
+    margin-bottom: 1rem;
+}
+.services-box h3{
+    font-size: 2.6rem;
+}
+.services-box p{
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+.services-box .btn{
+    background-color: white;
+}
+.services-box .btn:hover{
+    color: var(--main-color);
+}
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+}
+::-webkit-scrollbar-track{
+    background-color: var(--bg-color);
+    width: 50px;
+}
